# projectEvents

./: README.MD  events.db  main.py  pyproject.toml  test.db  test.py
app/: config.py
app/api/: auth.py  dependencies.py  events.py  roles.py  sample.py  web.py
app/database/: database.py  db_manager.py
app/exceptions/: auth.py  base.py
app/models/: confirm_events.py  events.py  roles.py  users.py
app/repositories/: base.py  events.py  roles.py  users.py
app/schemes/: events.py  relations_users_roles.py  roles.py  users.py
app/services/: auth.py  base.py  events.py  roles.py
app/static/css/: auth.css  index.css  main.css  style.css
app/static/js/: auth.js  index.js  main.js
app/templates/: auth.html  index.html
migrations/: env.py
migrations/versions/: 3764ea30ad49_initial_database_schema.py  8019d75e3d9f_initial_database_schema.py
