[project]
name = "individual-project-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "bcrypt==4.0.1",
    "black>=25.9.0",
    "fastapi[all]>=0.120.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
]
